Bug 1815713 - Allow pull to refresh from subframes. r=botond,geckoview-reviewers,owlish

When a subframe and all of its scroll handoff parents have no room to
scroll up, provide a mechanism for the frontend to implement
pull-to-refresh. When input targets a subframe that meets the above
conditions:

For eager results and content that has a related event handler that does
not preventDefault, return input "unhandled". This allows pull to refresh
to work on mobile when the upwards scroll occurs over a subframe.

Differential Revision: https://phabricator.services.mozilla.com/D176559